2009-01-08 Lorenzo Natale <nat@liralab.it>
	* conf/FindGthread.cmake
	* conf/YarpReqLib.cmake
	* src/CMakeLists.txt
	* src/yarpview/CmakeLists
	added gthread libs, used by new version of yarpview, searched 
	only when requested
	
2008-12-30 Lorenzo Natale <nat@liralab.it>
	* src/yarpview:
	started reorganization and update of yarpview, at the moment
	the new version is compiled only if an appropriate flag is 
	selected in cmake.
	
2008-12-11 Lorenzo Natale <nat@liralab.it>
	* src/libYARP_OS/src/Terminator.cpp
	* src/libYARP_OS/include/yarp/os/Terminator.h
	fixed bug in ~Terminee() that caused occasional deadlock
	when the object was destoyed without it received a quit message

2008-12-10 Lorenzo Natale <nat@liralab.it>
	* conf/YarpDevice.cmake, conf/YarpModuleHooks.cmake:
	fixed Debug/Release problems when building external modules library, 
	changes commented in code.

2008-12-03  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/os/playback.cpp: show an example of relaying messages
	with unknown format.

2008-11-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/PortReaderBuffer.h: add 
	disableCallback method (thanks Andreu Corominas Murtra for
	the suggestion)

2008-11-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: freezing version 2.2.2

2008-11-19  Lorenzo Natale <nat@liralab.it>

	* src/YARP_OS/src/Run.cpp: removed print in Run.cpp.

2008-11-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/allegro/yarp.asd: patch from Lorenz M\"{o}senlechner
	for Allegro Lisp.

	* example/swig/CMakeLists.txt: patch from Lorenz M\"{o}senlechner
	for Allegro Lisp.

2008-10-27  Lorenzo Natale <nat@liralab.it>

	* src/YARP_sig/include/yarp/sig/Matrix.h: corrected bug in submatrix function,
	added regression test.

2008-10-24  Lorenzo Natale <nat@liralab.it>

	* src/YARP_dev/include/yarp/dev/Attachable.h: new interface for an attachable device