@@ -23,7 +23,7 @@ Jose Gaspar (helped modify example/external/nameclient.cpp example for windows)
 Claudio Castellini (useful bug reports, drivers, QUICKSTART documentation)
 Michael Bucko (sig::yarp::draw fixes, bug reports)
 Nelson Gon\c calves (testing and patch for SWIG, Java, Matlab on MINGW)
-Marco Barbosa (64-bit linux bug fix)
+Marco Barbosa (64-bit linux bug fix, report of event notification problem)
 Tomassino Ferrauto (patches to Bottle implementation; shmem bug tracking)
 Boris Duran (patches for SWIG for motor control classes)
 Mattia Castelnovi (a bunch of drivers)
